Fix Border Spacing. Finally!

--- a/css/pixyll.css
+++ b/css/pixyll.css
@@ -230,6 +230,7 @@ table.highlighttable {
 
 td {
 	border-spacing:0;
+	padding:0;
 }
 
 blockquote {
